# Classical_Reconstruction_NeRF_3D_Gaussian_Splatting

./: .gitignore
3dgs/: README.md  idea.md  install.sh  pyproject.toml  reconstruct_statues_3dgs.py
3dgs/configs/: pipeline.yaml
3dgs/scripts/: run_full_pipeline.sh
3dgs/src/gs_statue/: __init__.py  cli.py  config.py  utils.py
3dgs/src/gs_statue/pipeline/: __init__.py  diagnostics.py  export_assets.py  render_views.py  train_splat.py  video_to_dataset.py
classical/: README.md  install.sh  pyproject.toml
classical/configs/: pipeline.yaml
classical/scripts/: run_full_pipeline.sh
classical/src/classical_recon/: __init__.py  cli.py  config.py  utils.py
classical/src/classical_recon/pipeline/: __init__.py  export_assets.py  run_colmap.py  video_to_frames.py
nerf/: README.md  install.sh  pyproject.toml
nerf/configs/: pipeline.yaml
nerf/scripts/: colmap_wrapper.sh  run_full_pipeline.sh
nerf/src/ns_nerf/: __init__.py  cli.py  config.py  utils.py
nerf/src/ns_nerf/pipeline/: __init__.py  export_assets.py  render_views.py  train_nerf.py  video_to_dataset.py
